packages/bcode/tests/ui/default_fail/evaluation_feature_is_opt_in.rs
use bcode::evaluation::SdkEvaluator;

fn main() {
    let _evaluator = SdkEvaluator::new();
}
